--- a/CinemaCity/Views/_ViewImports.cshtml
+++ b/CinemaCity/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using CinemaCity
 @using CinemaCity.Models
+@using CinemaCity.Web.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
