Add all movies and movie details pages.

--- a/CinemaCity/Views/Movie/All.cshtml
+++ b/CinemaCity/Views/Movie/All.cshtml
@@ -10,5 +10,6 @@
 	<div>
 		<h2>@movie.Title</h2>
 		<img src="@movie.ImagePath" alt="@movie.Title" />
+		<a asp-controller="Movie" asp-action="Details" asp-route-id="@movie.Id" class="btn btn-success">Details</a>
 	</div>
 }
