--- a/CinemaCity/Views/_ViewImports.cshtml
+++ b/CinemaCity/Views/_ViewImports.cshtml
@@ -1,4 +1,4 @@
 ﻿@using CinemaCity
 @using CinemaCity.Models
-@using CinemaCity.Web.ViewModels
+@using CinemaCity.Web.ViewModels.Movie
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
