Added ticket selection page

--- a/CinemaCity/Areas/Identity/Pages/Account/Login.cshtml
+++ b/CinemaCity/Areas/Identity/Pages/Account/Login.cshtml
@@ -5,6 +5,16 @@
     ViewData["Title"] = "Log in";
 }
 
+<style>
+input:-webkit-autofill,
+input:-webkit-autofill:hover, 
+input:-webkit-autofill:focus, 
+input:-webkit-autofill:active  {
+	transition: background-color 5000s;
+	-webkit-text-fill-color: white !important;
+}
+</style>
+
 <div class="row">
 	<div class="col-md-4 offset-md-4">
 		<br/>
