--- a/CinemaCity/Views/_ViewImports.cshtml
+++ b/CinemaCity/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using CinemaCity
 @using CinemaCity.Models
 @using CinemaCity.Web.ViewModels.Movie
+@using CinemaCity.Web.ViewModels.Booking
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
