--- a/CinemaCity/Views/_ViewImports.cshtml
+++ b/CinemaCity/Views/_ViewImports.cshtml
@@ -2,4 +2,5 @@
 @using CinemaCity.Models
 @using CinemaCity.Web.ViewModels.Movie
 @using CinemaCity.Web.ViewModels.Booking
+@using CinemaCity.Services.Interfaces
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
