Added administrator area.

--- a/CinemaCity/Views/_ViewImports.cshtml
+++ b/CinemaCity/Views/_ViewImports.cshtml
@@ -3,4 +3,7 @@
 @using CinemaCity.Web.ViewModels.Movie
 @using CinemaCity.Web.ViewModels.Booking
 @using CinemaCity.Services.Interfaces
+@using CinemaCity.Web.ViewModels.User
+@using CinemaCity.Web.Infrastructure.Extensions
+@using Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
