Added AddMovie admin page.

--- a/CinemaCity/Areas/Admin/Views/_VIewImports.cshtml
+++ b/CinemaCity/Areas/Admin/Views/_VIewImports.cshtml
@@ -1,2 +1,4 @@
-﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+﻿@using CinemaCity.Web.ViewModels.Movie
+@using CinemaCity.Web.ViewModels.Showtime
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
