--- a/CinemaCity/Areas/Admin/Views/Admin/Index.cshtml
+++ b/CinemaCity/Areas/Admin/Views/Admin/Index.cshtml
@@ -13,6 +13,7 @@
 	<span> | </span>
 	<a asp-area="Admin" asp-controller="Admin" asp-action="All"
 	   class="btn btn-primary btn-lg">All Users</a>
+	<span> | </span>
 	<a asp-area="Admin" asp-controller="Admin" asp-action="AddMovie"
 	   class="btn btn-primary btn-lg">Add movie</a>
 	<span> | </span>
