--- a/CinemaCity/Areas/Admin/Views/Admin/AddMovie.cshtml
+++ b/CinemaCity/Areas/Admin/Views/Admin/AddMovie.cshtml
@@ -130,7 +130,7 @@
 						</div>
 					</div>
 					<br />
-					<button type="submit" class="btn btn-primary">Add Movie</button>
+					<button type="submit" class="btn btn-danger">Add Movie</button>
 				</form>
 			</div>
 		</div>
