--- a/CinemaCity/Areas/Admin/Views/Admin/Index.cshtml
+++ b/CinemaCity/Areas/Admin/Views/Admin/Index.cshtml
@@ -6,15 +6,14 @@
 	<h2 class="display-4">Administrator dashboard</h2>
 	<hr class="my-4">
 	<a asp-area="" asp-controller="Movie" asp-action="All"
-	   class="btn btn-primary btn-lg">All Movies</a>
+	   class="btn btn-danger btn-lg">All Movies</a>
 	<span> | </span>
 	<a asp-area="Admin" asp-controller="Admin" asp-action="All"
-	   class="btn btn-primary btn-lg">All bookings</a>
+	   class="btn btn-danger btn-lg">All bookings</a>
 	<span> | </span>
 	<a asp-area="Admin" asp-controller="Admin" asp-action="All"
-	   class="btn btn-primary btn-lg">All Users</a>
+	   class="btn btn-danger btn-lg">All Users</a>
 	<span> | </span>
 	<a asp-area="Admin" asp-controller="Admin" asp-action="AddMovie"
-	   class="btn btn-primary btn-lg">Add movie</a>
-	<span> | </span>
+	   class="btn btn-danger btn-lg">Add movie</a>
 </div>
