--- a/CinemaCity/Areas/Identity/Pages/Account/Login.cshtml
+++ b/CinemaCity/Areas/Identity/Pages/Account/Login.cshtml
@@ -16,7 +16,12 @@ input:-webkit-autofill:active  {
 </style>
 
 <div class="row">
-	<div class="col-md-4 offset-md-4">
+	<div class="col-md-auto offset-md-1">
+		<img src="~/images/logo.png" id="logo">
+	</div>
+	<div class="col-md-4 offset-md-1">
+		<br/>
+		<br/>
 		<br/>
 		<div class="card">
 			<h1 class="text-center">@ViewData["Title"]</h1>
@@ -40,7 +45,7 @@ input:-webkit-autofill:active  {
 						</label>
 					</div>
 					<div>
-						<button id="login-submit" type="submit" class="w-100 btn btn-lg btn-danger">Log in</button>
+						<button id="login-submit" type="submit" class="w-100 btn btn-lg btn-danger shadow-none">Log in</button>
 					</div>
 					<div>
 						<p>
