--- a/CinemaCity/Areas/Identity/Pages/Account/Register.cshtml
+++ b/CinemaCity/Areas/Identity/Pages/Account/Register.cshtml
@@ -5,7 +5,11 @@
 }
 
 <div class="row">
-	<div class="col-md-4 offset-md-4">
+	<div class="col-md-auto offset-md-1">
+		<img src="~/images/logo.png" id="logo">
+	</div>
+	<div class="col-md-4 offset-md-1">
+		<br/>
 		<br/>
 		<div class="card">
 			<h1 class="text-center">@ViewData["Title"]</h1>
@@ -28,7 +32,7 @@
 						<label asp-for="Input.ConfirmPassword">Confirm Password</label>
 						<span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
 					</div>
-					<button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary">Register</button>
+					<button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-danger shadow-none">Register</button>
 				</form>
 			</div>
 		</div>
